--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <a href="https://github.com/m3hr4nn" class="mx-4 text-blue-600 hover:underline">GitHub</a>
         <a href="https://m3hr4nn.com" class="mx-4 text-blue-600 hover:underline">Website</a>
       </div>
-      <a href="[Your resume PDF link]" class="mt-6 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Download Resume</a>
+      <a href="#" class="mt-6 inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Download Resume</a>
     </div>
   </section>
 
